tenants/team-auth/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: team-auth-dev
  labels:
    app.kubernetes.io/name: auth-api
    app.kubernetes.io/part-of: gitops-platform
    tenant: team-auth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
