tenants/team-auth/base/networkpolicy.yaml
---
# Deny ALL por defecto
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: team-auth-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
# Permitir ingress desde NGINX
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx
  namespace: team-auth-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: auth-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 9898
---
# Permitir ingress desde team-payments (mismo ambiente)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-payments
  namespace: team-auth-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: auth-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              tenant: team-payments
              environment: dev   # Solo mismo ambiente
      ports:
        - protocol: TCP
          port: 9898
---
# Permitir egress DNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-dns
  namespace: team-auth-dev
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
# Permitir ingress desde Prometheus
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-prometheus
  namespace: team-auth-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: auth-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9898
